crates/plotnik-tests/tests/03-analyze/alternations/mixed_nested_in_node.txt
Q = (call
  [
    A: (a)
    (b)
  ]
)
------------------ DIAGNOSTICS -------------------
error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - labeled alternative here
4 |     (b)
  |     ^^^
  |
help: either label every alternative or remove all labels
------------------ DEFINITIONS -------------------
